# clawmobile

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
config/: devices.example.json  ifarm.example.toml
ifarm/: __init__.py  cli.py  controller.py  diagnostics.py  exceptions.py  server.py  swarm.py
ifarm/modules/: __init__.py  hardware.py  proxy.py  scraper.py  sms.py
ifarm/utils/: __init__.py  config.py  device.py  logger.py
ifarm/vision/: __init__.py  _json_utils.py  base.py  mlx_backend.py  ocr_fallback.py  ollama_backend.py
scripts/: setup.sh
skills/openclaw-ifarm/: SKILL.md
tests/: conftest.py  test_diagnostics.py  test_phase1.py  test_phase2.py  test_phase3.py
